# explicitcad

./: CMakeLists.txt  explicitcad.nix  explicitcad.pro
.github/workflows/: ci.yml
Resources/: ExplicitCAD.icns  Info.plist.in
cmake/: FixupBundle.cmake  FixupBundle.cmake.in
